# lamin-spatial

./: .gitignore  .pre-commit-config.yaml  README.md  lamin-project.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  doc-changes.yml
_skip/: 01-rxrx1-ingest.ipynb  rxrx.ipynb
docs/: 01-download.ipynb  02-meta-rxrx1.ipynb  02-metadata.ipynb  03-meta-rxrx2.ipynb  04-access.ipynb  04-images-rxrx1.ipynb  changelog.md  index.md  notebooks.md  query-rxrx.ipynb  quickstart.ipynb  reference.md  rxrx.ipynb  rxrx.md  rxrx1-download.ipynb  rxrx1-register.ipynb  rxrx2-download.ipynb  rxrx2-register.ipynb  search-query.ipynb  vitessce.ipynb  vitessce.md  vitessce2.ipynb  vitessce2.md
docs/notebooks/: 01-download.ipynb  01-rxrx1-download.ipynb  01-rxrx1-ingest.ipynb  02-rxrx1-ingest.ipynb  02-rxrx1.ipynb  03-vitessce.ipynb  04-images-rxrx1.ipynb  2024-04-02-marshall-2022.ipynb  images-rxrx1-original.ipynb
docs/static/: 2024-04-02-marshall-2022.ipynb  mudata-vitessce.ipynb
lamin_spatial/: __init__.py  spatialdata_curator.py
rxrx1_lamin/: __init__.py
rxrx_lamin/: __init__.py
tests/: conftest.py  test_base.py  test_notebooks.py  test_spatialdata_curator.py
